增加修改密码选项

--- a/FanyiNetwork/Views/Shared/_Layout.cshtml
+++ b/FanyiNetwork/Views/Shared/_Layout.cshtml
@@ -85,6 +85,9 @@
                                 <a href="~/home/assignmentList">
                                     <Dropdown-item>我的全部单号</Dropdown-item>
                                 </a>
+                                <a href="~/account/changepassword">
+                                    <Dropdown-item>修改密码</Dropdown-item>
+                                </a>
                                 <a href="~/account/logout">
                                     <Dropdown-item divided>登出</Dropdown-item>
                                 </a>
