--- a/FanyiNetwork/Views/Home/Stats.cshtml
+++ b/FanyiNetwork/Views/Home/Stats.cshtml
@@ -201,8 +201,7 @@
                     },
                     {
                         title: '操作',
-                        render: function (row)
-                        { 
+                        render: function (row) {
                             return '<i-button type="info" @@click="redirect(' + row.userid + ')">查看详情</i-button>';
                         }
                     }
