--- a/FanyiNetwork/Views/Client/Index.cshtml
+++ b/FanyiNetwork/Views/Client/Index.cshtml
@@ -4,25 +4,53 @@
 
 @section styles{
     <style type="text/css">
-
+        #inquire {
+            width:100%;
+            margin-bottom:10px;
+        }
+        #inquire span {
+            display:inline-block;
+            font-size: 14px;
+            font-weight: 700;
+            color: #464c5b;
+        }
+        /*.edit {
+            width:20px;
+        }*/
+        .edit {
+            border: none;
+        }
+        .del {
+            background-color:red;
+            border:none;
+        }
+        .del:hover {
+            background-color:#E94242;
+        }
+        .ivu-table th {
+            text-align: center;
+        }
+        .ivu-table-cell {
+            text-align:center;
+        }
     </style>
 }
-
     <div class="layout-content">
         <div class="container">
-        <i-form :model="client" ref="client" :label-width="80" enctype="multipart/form-data">
+        <i-form  :model="client" ref="client" :label-width="80" enctype="multipart/form-data">
             <Row>
+                <a href=""></a>
                 <i-col span="6">
                     <Form-item label="昵称">
                         <i-input v-model="client.name" placeholder="输入昵称/微信名称或其他称呼" ></i-input>
                     </Form-item>
                 </i-col>
-                <i-col span="6">
+                <i-col span="5">
                     <Form-item label="姓名">
                         <i-input v-model="client.realName" placeholder="输入真实姓名"></i-input>
                     </Form-item>
                 </i-col>
-                <i-col span="6">
+                <i-col span="4">
                     <Form-item label="性别">
                         <i-select v-model="client.sex" >
                             <i-option value="男">男</i-option>
@@ -30,7 +58,12 @@
                         </i-select>
                     </Form-item>
                 </i-col>
-                <i-col span="6">
+                <i-col span="4">
+                    <Form-item label="年龄">
+                        <i-input v-model="client.age" placeholder="请输入年龄"></i-input>
+                    </Form-item>
+                </i-col>
+                <i-col span="5">
                     <Form-item label="生日">
                         <Date-picker type="date" placeholder="选择生日" v-model="client.birthday"></Date-picker>
                     </Form-item>
@@ -49,21 +82,31 @@
         </i-form>
 
         <div class="assignment-title">全部客户</div>
-        <i-table :columns="client_column" :data="clients"></i-table>
+        <div id="inquire">
+            <span>查询客户：</span>
+            <i-input v-model="searchText" placeholder="请输入您要查询的客户昵称..." @@on-enter="fetchClients" style="width: 92%"></i-input>
+        </div>
+            
+        
+        <i-table id="table" :columns="client_column" :data="clients"></i-table>
+
+
     </div>
     </div>
 
 @section scripts{
     <script>
-
         moment.locale("zh-cn");
 
         new Vue({
             el: '#app',
             data: {
                 sex: "male",
-                client: {},
+                client: {
+
+                },
                 clients: [],
+                searchText:"",
                 client_column: [
                     {
                         title: '昵称',
@@ -79,9 +122,13 @@
                     },
                     {
                         title: '年龄',
-                        key: 'birthday',
-                        render: function (row) {
-                            return moment(row.birthday).from(moment(), true).toString().replace("年", "岁");
+                        key: 'age',
+                        render: function (val) {
+                            console.log(val);
+                            if (val.age == null) {
+                                val.age = 0
+                            }
+                            return val.age + '岁';
                         }
                     },
                     {
@@ -98,6 +145,12 @@
                     {
                         title: '总消费额',
                         key: 'totalSpending'
+                    },
+                    {
+                        title: '操作',
+                        render: function (row) {
+                            return '<div><i-button class="edit"  type="info" style="padding: 5px 6px;margin-right:5px"  @@click="redirect(' + row.id + ')">编辑</i-button><i-button class="del" type="info" style="padding: 5px 6px"  @@click="terminate(' + row.id + ')">删除</i-button></div>';
+                        }
                     }
                 ],
             },
@@ -105,10 +158,14 @@
                 this.fetchClients();
             },
             methods: {
+                All: function () {
+                    this.status = '';
+                    this.searchText = '';
+                },
                 fetchClients: function () { 
                     var _this = this;
 
-                    axios.get("/api/client/").then(function (response) {
+                    axios.get("/api/client/?nick=" + _this.searchText).then(function (response) {
                         _this.clients = response.data;
                     }).catch(function (error) {
                         _this.$Message.error('查询客户失败!' + error.response.data);
@@ -120,10 +177,26 @@
 
                     axios.post("/api/client/add", this.client).then(function (response) {
                         _this.$Message.success('新增客户成功!');
+               
+                        setTimeout(function () {
+                            window.location.href = "/client/index";
+                        }, 1000);
                     }).catch(function (error) {
                         _this.$Message.error('新增客户失败!' + error.response.data);
                     });
                 },
+                redirect: function (val) {
+                    window.location.href = "/client/Edit?id=" + val;
+                },
+                terminate: function (val) {
+                    var _this = this;
+                    axios.get("/api/client/del?id=" + val).then(function (response) {
+                        _this.$Message.success('删除成功!');
+                        setTimeout(function () {
+                            window.location.href = "/client/index";
+                        }, 1000);
+                    });
+                }
             }
         })
 
